# STAT451

./: Dockerfile  README  README.md  entropy.py  entropy_dual.py  go.mod  go.sum  hw4.py  main.go  octave_entropy_dual.m  optim.py  portfolio.py
C/: Dockerfile  Makefile  README  test.sh
C/include/: csvinfo.h  ucs_ascent.h  ucs_converge.h  ucs_convergence.h  ucs_ftodm.h  ucs_ftodv.h  ucs_iter_result.h  ucs_newton_fisher.h  ucs_norm.h  ucs_poiss_ascent.h  ucs_poiss_fisher.h  ucs_poiss_newton.h  ucs_readfile.h  ucs_result.h  ucs_solve.h
C/src/: csvinfo.c  main.c  p1_ascent.c  p1_fisher.c  p1_newton.c  ucs_ascent.c  ucs_convergence.c  ucs_ftodm.c  ucs_ftodv.c  ucs_newton_fisher.c  ucs_norm.c  ucs_readfile.c  ucs_solve.c
C/test/: ascent_big_poiss.c  ascent_sanity_check.c  ascent_small_poiss.c  ascent_small_poiss.c.FAILING  fisher_big_poiss.c  ftodm_simple.c  poiss_d.c  (+12 more)
HW4/: Cargo.toml  Project.toml
MATLAB/: corr_a.m  demo.m  estimate_corr_a.m  estimate_corr_b.m  estimate_prodrandom_den.m  newton.m  nonhompoiss.m  polyrandom1.m  polyrandom2.m  prodrandom.m  server_break.m  server_break1.m  server_break2.m  server_break_demo.m  test.m  truncbinomcdf.m  truncbinomrandom2.m  truncbinomrandom3.m  truncpoisscdf.m  truncpoissrandom2.m
R/: ascent.R  quasi.R  quasi_back.R
data/: p1_x0.mm  p2_A.mm  p2_b.mm  p2_x0.mm
hw4/: hw4.py  pyproject.toml
hw4/hw4/: hw4.py
hw4/hw4/optim/: optim.py
hw4/optim/: optim.py
hw4/portfolio/: portfolio.py
hw4/tests/: test_min_quad_w_equal.py
tests/: test_entropy_dual.py  test_min_quad_w_equal.py  test_optim.py  test_portfolio.py
(+102 files in other folders)
