[tool.poetry]
name = "hw4"
version = "0.1.0"
description = "solutions to STAT 451 HW 4 problems"
authors = ["Kevin Mazzarelli <kmazza2@uic.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.2"
numpy = "1.24.2"
scipy = "1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
